--- a/bunny-template-raw.css
+++ b/bunny-template-raw.css
@@ -105,8 +105,10 @@ content: url('https://iili.io/KZBOdKX.jpg') !important;
 
 div.mound-grid>img {
 content: url('https://iili.io/KtLA5kx.jpg') !important;
+  width: 181.875px;
+  height: 120px;
 }
-    
+
 .col-xs-10 {
     background: rgba(0, 0, 0, 0.5) !important;
     border: 1px solid #FFFFFF !important;
