--- a/bunny-template-raw.css
+++ b/bunny-template-raw.css
@@ -1,3 +1,5 @@
+/* This CSS is a free template by Blub-Blub (#519615). Please DO NOT remove any credentials, or the breadcrumb credit. You are not allowed to use this template to sell comms, though you are allowed to change anything to match your style more. This still doesn't mean you can remove any credits. I am fully able to remove my free CSSs, I hope I do not have to. */
+
 /* font import */
 @import url('https://fonts.googleapis.com/css2?family=Bitcount+Grid+Single:wght@100..900&display=swap');
 
