--- a/bunny-template-raw.css
+++ b/bunny-template-raw.css
@@ -114,7 +114,7 @@ content: url('https://iili.io/KtLA5kx.jpg') !important;
     border: 1px solid #FFFFFF !important;
 }
 
-.div.col-xs-2 {
+col-xs-2 {
     background: rgba(0, 0, 0, 0.5) !important;
     border: 1px solid #FFFFFF !important;
     }
